--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-icons": "^4.4.0",
     "react-parallax": "^3.5.1",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.0",
