--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "styled-components": "^5.3.5",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
